--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,12 @@ spring.datasource.url=jdbc:mysql://localhost/db_gamesGeneration?createDatabaseIf
 spring.datasource.username=loja
 spring.datasource.password=root
 spring.jpa.show-sql=true
+
+spring.profiles.active=prod
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
+springdoc.swagger-ui.operationsSorter=method
+springdoc.swagger-ui.disable-swagger-default-url=true
+springdoc.packagesToScan=com.generation.minhaLojaDeGames.controllers
+springdoc.swagger-ui.use-root-path=true
